feat: gráficos em tempo real com seletor de período (24H/7D/1M/1A)
- Adicionado ChartPeriod enum (hours24, days7, month1, year1)
- Seletor de período global na HomeScreen
- Gráficos atualizam em tempo real a cada 60s
- Histórico completo atualiza a cada 5 minutos
- CryptoService suporta diferentes períodos de histórico
- Novo ícone personalizado do app
- Tesouro Direto, configurações e lifecycle implementados

--- a/docs/2025-12-16.md
+++ b/docs/2025-12-16.md
@@ -2,7 +2,7 @@
 
 **Projeto:** Crypto Alert  
 **Criado em:** 2025-12-16  
-**Última atualização:** 2025-12-16 (SESSÃO 3)
+**Última atualização:** 2025-12-16 (SESSÃO 4)
 
 ---
 
@@ -22,6 +22,14 @@
 - Cálculo de **lucro/prejuízo** em tempo real
 - **Resumo do portfólio** total
 - Persistência local dos investimentos
+
+### Sessão 4: Configurações + Tesouro Direto + Lifecycle
+- **Threshold configurável** (1% a 15%, padrão 10%)
+- **Badge de ação** COMPRAR/VENDER/MANTER nos cards
+- **Card Tesouro Direto** com taxa SELIC real do BCB
+- **Tela de Configurações** com slider
+- **Pause automático** quando app em background (economiza bateria/requisições)
+- Botão "Simular" mais intuitivo (estilo pill)
 
 ---
 
@@ -162,11 +170,44 @@ Agora (preço subiu):
 
 ---
 
+## ✅ Implementado na Sessão 4
+
+### Novos Models
+- [x] `lib/models/tesouro_simulation.dart`
+  - Cálculo de juros compostos
+  - Classes TempoOption e TempoOptions
+
+### Novos Services
+- [x] `lib/services/settings_service.dart`
+  - Persiste threshold com SharedPreferences
+  - Método getSuggestedAction()
+  - Enum SuggestedAction
+- [x] `lib/services/selic_service.dart`
+  - Busca taxa SELIC da API do Banco Central
+  - Cache de 24h
+
+### Novos Widgets/Screens
+- [x] `lib/ui/widgets/tesouro_card.dart`
+  - Simulador de Tesouro Selic
+  - Input de valor e dropdown de tempo
+  - Resultado com ganho formatado
+- [x] `lib/ui/screens/settings_screen.dart`
+  - Slider de threshold (1% a 15%)
+  - Preview visual das ações
+  - Explicação da lógica
+
+### Atualizações
+- [x] `lib/utils/config.dart` - Threshold 10%, limites, URL BCB
+- [x] `lib/ui/widgets/crypto_card.dart` - Badge de ação, botão pill
+- [x] `lib/ui/screens/home_screen.dart` - WidgetsBindingObserver, lifecycle
+
+---
+
 ## 🔜 Próximos Passos
 
-1. [ ] Testar app no emulador/dispositivo
+1. [ ] Testar app no dispositivo físico
 2. [ ] Implementar push notifications reais
-3. [ ] Adicionar histórico de preço de compra
+3. [ ] Adicionar mais títulos do Tesouro (IPCA+, Prefixado)
 4. [ ] Gráfico de evolução do portfólio
 5. [ ] Exportar dados do portfólio
 
@@ -174,8 +215,8 @@ Agora (preço subiu):
 
 ## 📊 Estatísticas Totais do Dia
 
-| Métrica | Sessão 1 | Sessão 2 | Sessão 3 | Total |
-|---------|----------|----------|----------|-------|
-| Arquivos criados | 6 | 6 | 4 | **16** |
-| Arquivos modificados | 5 | 4 | 2 | **11** |
-| Linhas adicionadas | ~800 | ~700 | ~600 | **~2100** |
+| Métrica | Sessão 1 | Sessão 2 | Sessão 3 | Sessão 4 | Total |
+|---------|----------|----------|----------|----------|-------|
+| Arquivos criados | 6 | 6 | 4 | 5 | **21** |
+| Arquivos modificados | 5 | 4 | 2 | 3 | **14** |
+| Linhas adicionadas | ~800 | ~700 | ~600 | ~700 | **~2800** |
