feat: rebrand para NexusStack
- Renomeado app de Crypto Alert para NexusStack
- Atualizado nome no Android (AndroidManifest.xml)
- Atualizado titulo e classe principal
- Nova cor tema: roxo tech (#6C5CE7)
- Versao atualizada para 2.0.0

--- a/docs/2025-12-18.md
+++ b/docs/2025-12-18.md
@@ -74,10 +74,29 @@ Cada moeda com:
 
 ---
 
+---
+
+## Feature 2: Campo de Busca
+
+**Branch:** `feature/search-filter`
+
+### Implementado
+- Campo de busca na home
+- Filtra por nome ou símbolo
+- Filtragem em tempo real
+- Botão para limpar busca
+- Mensagem "Nenhuma moeda encontrada"
+
+---
+
+## PRs Criados
+
+1. **feature/multi-crypto** - 26 moedas com lista organizada
+2. **feature/search-filter** - Campo de busca
+
 ## Próximos Passos
 
 - [ ] Testar APK no dispositivo
-- [ ] Verificar carregamento das 26 moedas
-- [ ] Validar gráficos sob demanda
-- [ ] Considerar busca/filtro de moedas
+- [ ] Merge dos PRs
+- [ ] Release v2.0.0
 
